--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Education</a></li>
                 <li><a href="mailto:vishav.jh@gmail.com?Subject=Hi Vishavjeet" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a></li>
+                <li> <a  href="Vishavjeet.pdf" download>
+                      <i class="fa fa-download"></i> My Resume
+                    </a>
+                </li>
               </ul>
             </div>
           </div>
@@ -49,7 +53,7 @@
             <div class="col-md-12 wow fadeIn delay-05s">
               <div class="banner-text">
                 <h2>Hi, I am a Full Stack Developer.</h2>
-                <p>You have a project? Let me join and create something productive.</p>
+                <p>An experienced software developer who can work independently or in a team. Expert in transforming a business model in to a software solution.</p>
               </div>
               <div class="overlay-detail text-center">
                 <a href="#about"><i class="fa fa-angle-down"></i></a>
@@ -69,9 +73,8 @@
             <h2 class="title-text text-right">
               <br><span class="deco">I am</span>
             </h2>
-            <p>Full-Stack Developer with result-driven, customer-focused, articulate and analytical skills. I am strong in design and problem-solving skills with years of software development experience. I seek to expand and always ready to learn new technologies.</p>
-            <p>Currently i am working with following technologies but previously i have worked with other technologies like .Net, java and C, C++. I am pretty comfortable switching technologies.</p>
-
+            <p>Full-Stack Developer with results-driven, customer-focused, articulate and analytical skills. I am strong in design and problem-solving skills with years of software development experience. I seek to expand and always ready to learn new technologies.</p>
+            <p>The following are some of the many technologies I work with. I am very flexible in opting for new technologies like my recent projects includes Java virtual keyboard and a React app with Nodejs backend.</p>
           </div>
         </div>
         <div class="col-md-6 text-right">
@@ -79,11 +82,13 @@
             <br><span class="deco">Skills</span>
           </h2>
           <ul class="abt-list">
-            <li>- Angular, Angularjs</li>
+            <li>- Angular, Angularjs, React</li>
             <li>- BootStrap, Angular Material Design.</li>
             <li>- Nodejs, Expressjs</li>
             <li>- Javascript, Typescript</li>
             <li>- PostgreSQL, mySQL</li>
+            <li>- RabbitMQ, Heroku, AWS </li>
+            <li>- Google Cloud API'S</li>
           </ul>
         </div>
 
@@ -94,12 +99,19 @@
   <section>
     <div class="container text-center tec_icons">
       <img width="200px" class="img-fluid" alt="angular logo" src="./assets/icons/angular.svg"/>
+      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/bootstrap.png"/>
+      <img width="150px" style="background:#075aba;" class="img-fluid img-rounded" alt="Angular Material logo" src="./assets/icons/angular-mat.svg"/>
+      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/react.svg"/>
+      <br/>
+      <br/>
       <img width="200px" class="img-fluid" alt="nodejs logo" src="./assets/icons/nodejs.png"/>
+      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/mysql.svg"/>
       <img width="200px" class="img-fluid" alt="postgreSQL logo" src="./assets/icons/postgresql.png"/>
       <br/>
-      <br/>
-      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/bootstrap.png"/>
-      <img width="150px" style="background:#075aba;" class="img-fluid img-rounded" alt="rabbitMQ logo" src="./assets/icons/angular-mat.svg"/>
+      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/rabbitmq.png"/> &nbsp;
+      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/cloud-logo.svg"/>
+      <img width="200px" class="img-fluid" alt="bootstrap logo" src="./assets/icons/heroku.png"/>
+      <img width="200px" class="img-fluid" alt="bootstrap logo" height="100px" src="./assets/icons/aws.png"/>
     </div>
   </section>
 
@@ -113,7 +125,8 @@
 
         <div class="col-md-6">
           <div class="featured-image">
-            <img class="img-responsive project-image" src="assets/images/projects/mechani.png" alt="project name" />
+
+            <img class="img-responsive project-image"  src="assets/images/projects/touch.jpg" alt="project name" />
             <div class="ribbon">
               <div class="text">New</div>
             </div>
@@ -122,11 +135,19 @@
         <div class="col-md-6">
           <div class="item featured text-center">
             <div class="desc text-left">
-              <h3 class="project_title">Fully responsive Web App</h3>
-              <p class="project_summary">Angular App with Nodejs backend</p>
-              <p>I am using Angular 7, Bootstrap 4 Backuped up by Nodejs with Expressjs framework. I am using Postgres as the database.</p>
-              <p>This app is running on Heroku dyno, My main motive is to use all the latest technologies in this project so that i can achieve best performance.</p>
-              <p>The client will be able to monitor his inventory, employees and customer's data. And it is fully responsive to work with mobile.</p>
+              <h3 class="project_title">Virtual KeyBoard for touchscreens</h3>
+              <p class="project_summary">Java Swing Application</p>
+              <p>This was a virtual keyboard for touchscreens products running java applications.
+                I made this generic library to be used in various company's products.
+                This library can support 4 different types of user inputs ie. qwerty, IP addresses, signed and unsigned values.
+                Based on the input requirement this library can show different keyboards on the user interface.
+              </p>
+              <p>I am also working on a React project with Nodejs backend.
+                This is a totally new project from the ground up and the purpose of this project is to reduce the human effort in the test file handling by various employees of the company across North America.
+                This application can be used to process data from excel and XML files. And Users are able to reformate XML data and share among other users via google drive.
+                For sharing, authentication, I am using Google Cloud APIs.
+              </p>
+
             </div><!--//desc-->
         </div>
       </div>
@@ -139,16 +160,10 @@
       <div class="desc col-md-8 col-sm-8 col-xs-12">
         <h3 class="project_title">Cloud Migration</h3>
         <br/>
-        <p>In this project i had to migrate the whole business from the locally running server on to
+        <p>In this project, I had to migrate the whole application from the locally running server on
           <mark><abbr title="A cloud platform that lets companies build, deliver, monitor and scale apps" class="initialism">Heroku</abbr></mark>.
-          This include whole backend using <mark>Nodejs</mark> and Postgresql and frontend using <mark>Angularjs</mark>.
-          This was big project so i started with migrating the locally running <mark>Postgresql</mark> on to Heroku Postgresql service.
-          Then i did all the modifications within the app to make it compatible with Heroku environment.
-          There were few modules which were depending on local file system, as Heroku doesn’t have any file system
-          i had to refactor all those modules into <mark>Microservices</mark> using different technologies like <mark>AWS(S3)</mark> and
-          <mark><abbr title="RabbitMQ is a messaging broker that gives your applications a common platform to send and receive messages."
-            class="initialism" >rabbitMQ</abbr></mark> etc.
-            so there was a lot to small projects involved in this whole project. It was a good experience of organising and prioritising my work.
+          This includes the whole backend using <mark>Nodejs</mark> and Postgresql and frontend using <mark>Angularjs</mark>. This was a big project so I started with migrating the locally running <mark>Postgresql</mark> on to Heroku Postgresql service. Then I did all the modifications within the app to make it compatible with the Heroku environment. There were few modules which were depending on the local file system, as Heroku doesn’t have any file system I had to refactor all those modules into <mark>Microservices</mark> using different technologies like <mark>AWS(S3)</mark> and <mark><abbr title="RabbitMQ is a messaging broker that gives your applications a common platform to send and receive messages."
+            class="initialism" >rabbitMQ</abbr></mark> etc. so there was a lot to small projects involved in this whole project. It was a good experience of organizing and prioritizing my work.
           </p>
 
         </div><!--//desc-->
@@ -159,9 +174,12 @@
         <img class="img-responsive img-circle project-image" src="assets/images/projects/project-5.png" alt="project name" />
       </div>
       <div class="desc col-md-8 col-sm-8 col-xs-12">
-        <h3 class="project_title">xsite Mobile App</h3>
+        <h3 class="project_title">Mobile App</h3>
         <br />
-        <p>I have created this mobile version of the primary Angularjs App of my previous job using <mark> Angularjs and angularjs material design</mark>. This app was fully responsive to work with tablets and phones including gesture support using <mark> Hammer.js</mark></p>
+        <p>I have created this mobile version of the primary Angularjs App on my previous job using <mark> Angularjs and Angularjs material design</mark>.
+            This app was fully responsive to work with tablets and phones including gesture support using <mark> Hammer.js</mark>.
+            I have also used <mark>D3js</mark> for animations like removing card animation etc.
+        </p>
 
       </div><!--//desc-->
     </div><!--//item-->
@@ -187,9 +205,7 @@
       <div class="desc col-md-8 col-sm-8 col-xs-12">
         <h3 class="project_title">Data Visualization</h3>
         <br />
-        <p>In this project i created oil guages using <mark><abbr title="open source data Visualization library" class="initialism">D3.js</abbr></mark>. A little glance on these gauges really make it easy for the client to decide how much oil is left in the stock and when to make next purchase order.
-        </p>
-
+        <p>In this project, I created an oil gauges using <mark><abbr title="open source data Visualization library" class="initialism">D3js</abbr></mark>. A little glance at these gauges really makes it easy for the client to decide how much oil is left in the stock and when to make the next purchase.</p>
       </div><!--//desc-->
     </div><!--//item-->
 
@@ -201,12 +217,11 @@
       <div class="desc col-md-8 col-sm-8 col-xs-12">
         <h3 class="project_title">SFTP File Transfer</h3>
       <br />
-        <p>In this project i wrote a Nodejs application to transfer files from customer's <mark>SFTP</mark> to our server for further processing.
-          This program is still in use and transferring 1000’s of files from 100’s of customers every minute for the company.
-          It is a core program of the whole business so <mark>Error Handling</mark> is very important.
-          It does parallel transfer from multiple sites so as to achieve the maximum speed and refresh rate.
-        </p>
-
+      <p>In this project, I wrote a Nodejs application to transfer files from the customer's <mark>SFTP</mark> to a local server for further processing.
+        This program is used for transferring 1000’s of files from 100’s of customers every minute for the company.
+        It is a core program of the whole business so <mark>Error Handling</mark> was very important.
+        It does parallel transfer from multiple sites so as to achieve the maximum speed and refresh rate.
+      </p>
       </div><!--//desc-->
     </div><!--//item-->
   </section>
@@ -221,7 +236,7 @@
             <p class="summary">Developed a ‘Salon Management Software’ that includes various modules like Inventory
               control, Payroll, Personnel System Management (for managing employees and clients),
               Appointments (to be given to the client),Reminders (regarding employee on holiday,
-              client Birthday or anniversary, Products out of Stock, Bills Due),and various other
+              client Birthday or anniversary, Products out of Stock, Bills Due), and various other
               functionalities e.g. to enter the employee schedule, repeat the schedule for specified
               days, edit the schedule, auto reordering of products whose quantity have reached
               reorder point, editing the Product Order.</p>
@@ -270,10 +285,7 @@
       <!--end row-->
 
           <div class="footer text-right">
-            <div class="credits text-right">Want to hire me? Checkout
-              <a class="btn btn-sm btn-success" href="Vishavjeet.pdf" download>
-                <i class="fa fa-download"></i> My Resume
-              </a>
+            <div class="credits text-right">Last updated: April, 2020
             </div>
           </div>
 
