updated resume and page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#contact">Education</a></li>
-                <li><a href="mailto:vishav.jh@gmail.com?Subject=Hi Vishavjeet" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a></li>
+                <li><a href="mailto:vishav4@gmail.com?Subject=Hi Vishavjeet" target="_top"><i class="fa fa-paper-plane"></i> Contact Me</a></li>
                 <li> <a  href="Vishavjeet.pdf" download>
                       <i class="fa fa-download"></i> My Resume
                     </a>
